--- a/fluent/package.json
+++ b/fluent/package.json
@@ -13,12 +13,18 @@
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@toast-ui/calendar": "^2.1.3",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.0.5",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
