--- a/fluent/package.json
+++ b/fluent/package.json
@@ -19,9 +19,11 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
+    "mongodb": "^6.12.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.5.0",
