--- a/fluent/package.json
+++ b/fluent/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
     "lottie-react": "^2.4.1",
