--- a/fluent/package.json
+++ b/fluent/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@toast-ui/calendar": "^2.1.3",
+    "@types/react-datepicker": "^6.2.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +30,7 @@
     "mongodb": "^6.12.0",
     "next": "^15.1.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.0.0",
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
