--- a/fluent/package.json
+++ b/fluent/package.json
@@ -15,8 +15,14 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tiptap/extension-placeholder": "^2.11.5",
+    "@tiptap/extension-underline": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@toast-ui/calendar": "^2.1.3",
     "@types/react-datepicker": "^6.2.0",
+    "@udecode/cn": "^44.0.1",
+    "@udecode/plate-headless": "^21.5.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
