--- a/fluent/package.json
+++ b/fluent/package.json
@@ -41,6 +41,7 @@
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "rtf-parser": "^1.3.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
