--- a/fluent/package.json
+++ b/fluent/package.json
@@ -31,6 +31,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
+    "jspdf": "^3.0.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
