--- a/fluent/package.json
+++ b/fluent/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.5",
-    "@tiptap/react": "^2.11.5",
-    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "@toast-ui/calendar": "^2.1.3",
     "@types/react-datepicker": "^6.2.0",
     "@udecode/cn": "^44.0.1",
