--- a/fluent/package.json
+++ b/fluent/package.json
@@ -24,7 +24,7 @@
     "@toast-ui/calendar": "^2.1.3",
     "@types/react-datepicker": "^6.2.0",
     "@udecode/cn": "^44.0.1",
-    "@udecode/plate-headless": "^21.5.1",
+    "@udecode/plate-headless": "^15.0.6",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,9 +54,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "css-loader": "^7.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
