--- a/fluent/package.json
+++ b/fluent/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
     "jspdf": "^3.0.1",
+    "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "mongodb": "^6.12.0",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
