--- a/fluent/package.json
+++ b/fluent/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-highlight": "^2.12.0",
@@ -23,6 +24,7 @@
     "@tiptap/starter-kit": "^2.12.0",
     "@toast-ui/calendar": "^2.1.3",
     "@types/react-datepicker": "^6.2.0",
+    "@types/uuid": "^10.0.0",
     "@udecode/cn": "^44.0.1",
     "@udecode/plate-headless": "^21.5.1",
     "axios": "^1.7.9",
@@ -33,6 +35,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
+    "google-api-javascript-client": "^0.1.0",
     "jspdf": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
@@ -48,7 +51,8 @@
     "react-swipeable": "^7.0.2",
     "rtf-parser": "^1.3.3",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
