--- a/fluent/package.json
+++ b/fluent/package.json
@@ -26,6 +26,7 @@
     "@udecode/cn": "^44.0.1",
     "@udecode/plate-headless": "^21.5.1",
     "axios": "^1.7.9",
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.23",
@@ -33,6 +34,7 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
+    "he": "^1.2.0",
     "jspdf": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/he": "^1.2.3",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
