--- a/fluent/package.json
+++ b/fluent/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
     "he": "^1.2.0",
+    "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/he": "^1.2.3",
+    "@types/html2pdf.js": "^0.10.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
