--- a/fluent/package.json
+++ b/fluent/package.json
@@ -22,7 +22,9 @@
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@toast-ui/calendar": "^2.1.3",
+    "@tosspayments/payment-sdk": "^1.9.1",
     "@types/react-datepicker": "^6.2.0",
+    "@types/uuid": "^10.0.0",
     "@udecode/cn": "^44.0.1",
     "@udecode/plate-headless": "^21.5.1",
     "axios": "^1.7.9",
@@ -51,7 +53,8 @@
     "react-swipeable": "^7.0.2",
     "rtf-parser": "^1.3.3",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
