Payments Collection added check docs/payments_collection.md or docs/payment_database_structure.md

--- a/fluent/env.example
+++ b/fluent/env.example
@@ -19,3 +19,16 @@ KAKAO_CHANNEL_ID=your_kakao_channel_id_here
 
 # Note: Get these keys from https://developers.kakao.com/
 # See docs/kakao_business_message.md for detailed setup instructions
+
+# Payments Collection Test Mode
+# ⚠️ IMPORTANT: DO NOT SET THIS IN PRODUCTION ⚠️
+# 
+# DEFAULT: false (production mode - writes to MongoDB)
+# Set to 'true' ONLY for local testing (writes to JSON file instead of MongoDB)
+# 
+# Production deployment: DO NOT set this variable or set it to 'false'
+# Local development: Can optionally set to 'true' in .env.local for safe testing
+# PAYMENTS_TEST_MODE=false  # <-- Default: false (production mode)
+
+# Optional: Custom path for test data file (only used when PAYMENTS_TEST_MODE=true)
+# PAYMENTS_TEST_DATA_FILE=./fluent/.test-payments-data.json
