--- a/fluent/public/manifest.json
+++ b/fluent/public/manifest.json
@@ -1,20 +1,15 @@
 {
-  "name": "My App",
-  "short_name": "MyApp",
-  "description": "My Next.js PWA",
+  "name": "David's English Academy",
+  "short_name": "Fluent",
+  "description": "The English learning app for David's English Academy",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/davd-academy.png",
       "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512.png",
-      "sizes": "512x512",
       "type": "image/png"
     }
   ]
